# gamepad2key

./: .gitignore  CMakeLists.txt  LICENSE  default.ini
src/: btnmap.hpp  ini.hpp  main.cpp  vkmap.hpp
